# OwOWhatsDisOWO

./: Cargo.toml  README.md  package-lock.json
my-eyes-they-are-burning/: Dockerfile  docker-compose.yml  justfile  nginx.conf  package-lock.json  package.json
my-eyes-they-are-burning/src/: App.css  App.tsx  DAWHEELOFD00M.css  DAWHEELOFD00M.tsx  EndRacism.tsx  HAHAYOUSUCKTRYAGAIN.css  HAHAYOUSUCTRYAGAIN.tsx  Post.css  Post.tsx
src/: main.rs
