[package]
name = "Rust-OwOWhatsDisOWO"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.15"
